@@ -20,6 +20,7 @@ package org.quartz.impl.jdbcjobstore;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Proxy;
 import java.sql.Connection;
 import java.sql.SQLException;
@@ -139,6 +140,8 @@ public abstract class JobStoreSupport implements JobStore, Constants {
     private SchedulerSignaler schedSignaler;
 
     protected int maxToRecoverAtATime = 20;
+
+    private boolean useEnhancedStatements = false;
     
     private boolean setTxIsolationLevelSequential = false;
     
@@ -769,7 +772,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
      * (and potentially restored to a pool).
      */
     protected Connection getAttributeRestoringConnection(Connection conn) {
-        return (Connection)Proxy.newProxyInstance(
+        return (Connection) Proxy.newProxyInstance(
                 Thread.currentThread().getContextClassLoader(),
                 new Class[] { Connection.class },
                 new AttributeRestoringConnectionInvocationHandler(conn));
@@ -1370,10 +1373,33 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return (JobDetail)executeWithoutLock( // no locks necessary for read...
                 (TransactionCallback) conn -> retrieveJob(conn, jobKey));
     }
+
+    public List<JobDetail> getJobDetails(GroupMatcher<JobKey> matcher)
+        throws JobPersistenceException {
+        return (List<JobDetail>) executeWithoutLock(
+                (TransactionCallback) conn -> retrieveJobs(conn, matcher));
+    }
+
+    protected List<JobDetail> retrieveJobs(Connection conn, GroupMatcher<JobKey> matcher) throws JobPersistenceException {
+        try {
+            return getDelegate().selectJobDetails(conn, matcher,
+                getClassLoadHelper());
+        } catch (ClassNotFoundException e) {
+            throw new JobPersistenceException(
+                "Couldn't retrieve job because a required class was not found: "
+                    + e.getMessage(), e);
+        } catch (IOException e) {
+            throw new JobPersistenceException(
+                "Couldn't retrieve job because the BLOB couldn't be deserialized: "
+                    + e.getMessage(), e);
+        } catch (SQLException e) {
+            throw new JobPersistenceException("Couldn't retrieve job: "
+                + e.getMessage(), e);
+        }
+    }
     
     protected JobDetail retrieveJob(Connection conn, JobKey key) throws JobPersistenceException {
         try {
-
             return getDelegate().selectJobDetail(conn, key,
                     getClassLoadHelper());
         } catch (ClassNotFoundException e) {
@@ -1442,7 +1468,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
                     deleteJobAndChildren(conn, job.getKey());
                 }
             }
-        } catch (ClassNotFoundException | SQLException e) {
+        } catch (ClassNotFoundException | SQLException | IOException e) {
             throw new JobPersistenceException("Couldn't remove trigger: "
                     + e.getMessage(), e);
         }
@@ -1487,7 +1513,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
             storeTrigger(conn, newTrigger, job, false, STATE_WAITING, false, false);
 
             return removedTrigger;
-        } catch (ClassNotFoundException | SQLException e) {
+        } catch (ClassNotFoundException | SQLException | IOException e) {
             throw new JobPersistenceException("Couldn't remove trigger: "
                     + e.getMessage(), e);
         }
@@ -1656,8 +1682,10 @@ public abstract class JobStoreSupport implements JobStore, Constants {
                 }
                 
                 if(updateTriggers) {
-                    List<OperableTrigger> trigs = getDelegate().selectTriggersForCalendar(conn, calName);
-                    
+                    // FUTURE_TODO: make this more efficient with a true bulk operation...
+                    List<OperableTrigger> trigs;
+                    trigs = getDelegate().selectTriggersForCalendar(conn, calName);
+
                     for(OperableTrigger trigger: trigs) {
                         trigger.updateWithNewCalendar(calendar, getMisfireThreshold());
                         storeTrigger(conn, trigger, null, true, STATE_WAITING, false, false);
@@ -2109,6 +2137,23 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         }
 
         return list;
+    }
+
+    public List<OperableTrigger> getTriggersByJobAndTriggerGroup(GroupMatcher<JobKey> jobMatcher, GroupMatcher<TriggerKey> triggerMatcher) throws JobPersistenceException {
+        return (List<OperableTrigger>)executeWithoutLock( // no locks necessary for read...
+            (TransactionCallback) conn -> getTriggersByJobAndTriggerGroup(conn, jobMatcher, triggerMatcher));
+    }
+
+    protected List<OperableTrigger> getTriggersByJobAndTriggerGroup(Connection conn, GroupMatcher<JobKey> jobMatcher, GroupMatcher<TriggerKey> triggerMatcher) throws JobPersistenceException {
+        GroupMatcher<JobKey> jMatcher = jobMatcher == null ? GroupMatcher.anyGroup() : jobMatcher;
+        GroupMatcher<TriggerKey> tMatcher = triggerMatcher == null ? GroupMatcher.anyGroup() : triggerMatcher;
+        try {
+            return getDelegate().getTriggersByJobAndTriggerGroup(conn, jMatcher, tMatcher);
+        } catch (JobPersistenceException jpe) {
+            throw jpe;
+        } catch (Exception e) {
+            throw new JobPersistenceException("Couldn't obtain triggers for job: " + e.getMessage(), e);
+        }
     }
 
     /**
@@ -3094,11 +3139,12 @@ public abstract class JobStoreSupport implements JobStore, Constants {
                         delegateClass = getClassLoadHelper().loadClass(delegateClassName, DriverDelegate.class);
                     }
 
-                    delegate = delegateClass.newInstance();
+                    delegate = delegateClass.getDeclaredConstructor().newInstance();
 
                     delegate.initialize(getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper(), canUseProperties(), getDriverDelegateInitString());
-
-                } catch (InstantiationException | IllegalAccessException e) {
+                    delegate.setUseEnhancedStatements(this.useEnhancedStatements);
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                         InvocationTargetException e) {
                     throw new NoSuchDelegateException("Couldn't create delegate: "
                             + e.getMessage(), e);
                 } catch (ClassNotFoundException e) {
@@ -3539,7 +3585,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
             if (conn instanceof Proxy) {
                 Proxy connProxy = (Proxy)conn;
                 
-                InvocationHandler invocationHandler = 
+                InvocationHandler invocationHandler =
                     Proxy.getInvocationHandler(connProxy);
                 if (invocationHandler instanceof AttributeRestoringConnectionInvocationHandler) {
                     AttributeRestoringConnectionInvocationHandler connHandler =
@@ -3621,7 +3667,27 @@ public abstract class JobStoreSupport implements JobStore, Constants {
             }
         }
     }
-    
+
+    /**
+     * Returns true if enhanced statements for the database operations is enabled
+     * @return true if using enhanced statements
+     */
+    public boolean isUsingEnhancedStatements() {
+        return this.useEnhancedStatements;
+    }
+
+    /**
+     * Set to true to use enhanced bulk statements for the database operations
+     *
+     * @param useEnhancedStatements true to use enhanced statements
+     */
+    public void setUseEnhancedStatements(boolean useEnhancedStatements) {
+        this.useEnhancedStatements = useEnhancedStatements;
+        if (delegate != null) {
+            delegate.setUseEnhancedStatements(useEnhancedStatements);
+        }
+    }
+
     /**
      * Implement this interface to provide the code to execute within
      * the a transaction template.  If no return value is required, execute
